[gd_scene load_steps=24 format=2]

[ext_resource path="res://Effects.tscn" type="PackedScene" id=1]
[ext_resource path="res://Weapons.gd" type="Script" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://Characters/Shadow.png" type="Texture" id=4]
[ext_resource path="res://Characters/fox-spritesheet.png" type="Texture" id=5]
[ext_resource path="res://Hitbox.gd" type="Script" id=6]
[ext_resource path="res://UI/green_bar.png" type="Texture" id=7]
[ext_resource path="res://PlayerUI.gd" type="Script" id=8]
[ext_resource path="res://UI/orange_bar.png" type="Texture" id=9]
[ext_resource path="res://Weapon_Stats.gd" type="Script" id=10]
[ext_resource path="res://Camera.gd" type="Script" id=11]

[sub_resource type="Animation" id=13]
resource_name = "Invincibility"
loop = true

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/FoxSpritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/FoxSpritesheet/CanvasModulate:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/FoxSpritesheet:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Running-Down"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/FoxSpritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 13 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Running-Left"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/FoxSpritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 19 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Running-Right"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/FoxSpritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 2 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Running-Up"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/FoxSpritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 7 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Standing-Down"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/FoxSpritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 11, 12 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Standing-Left"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/FoxSpritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 18, 17 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Standing-Right"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/FoxSpritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Standing-Up"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/FoxSpritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.0
height = 2.10198

[sub_resource type="CapsuleShape2D" id=12]
radius = 5.0
height = 10.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Invincibility = SubResource( 13 )
anims/RESET = SubResource( 3 )
anims/Running-Down = SubResource( 5 )
anims/Running-Left = SubResource( 8 )
anims/Running-Right = SubResource( 9 )
anims/Running-Up = SubResource( 7 )
anims/Standing-Down = SubResource( 4 )
anims/Standing-Left = SubResource( 10 )
anims/Standing-Right = SubResource( 11 )
anims/Standing-Up = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="YSort" type="YSort" parent="."]

[node name="FoxSpritesheet" type="Sprite" parent="YSort"]
position = Vector2( 0, -1 )
texture = ExtResource( 5 )
hframes = 23
frame = 13

[node name="Shadow" type="Sprite" parent="YSort/FoxSpritesheet"]
show_behind_parent = true
position = Vector2( 0, 9 )
texture = ExtResource( 4 )

[node name="CanvasModulate" type="CanvasModulate" parent="YSort/FoxSpritesheet"]

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 0, 1 )
collision_mask = 0
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 12 )

[node name="Invincibility" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PlayerUI" type="Control" parent="."]
margin_left = -18.0
margin_top = 5.0
margin_right = 16.0
margin_bottom = 19.0
script = ExtResource( 8 )

[node name="Health Bar" type="TextureProgress" parent="PlayerUI"]
margin_left = 8.0
margin_top = 9.0
margin_right = 208.0
margin_bottom = 49.0
rect_scale = Vector2( 0.1, 0.1 )
value = 100.0
texture_progress = ExtResource( 7 )

[node name="EXP Bar" type="TextureProgress" parent="PlayerUI"]
self_modulate = Color( 1, 0.984314, 0.984314, 1 )
margin_left = 8.0
margin_top = 12.0
margin_right = 208.0
margin_bottom = 38.0
rect_scale = Vector2( 0.1, 0.1 )
texture_progress = ExtResource( 9 )

[node name="Weapon_Stats" type="Node" parent="."]
script = ExtResource( 10 )

[node name="Weapons" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
z_index = -2
current = true
script = ExtResource( 11 )

[node name="Effects" parent="." instance=ExtResource( 1 )]

[connection signal="damage_taken" from="." to="PlayerUI" method="_on_Player_damage_taken"]
[connection signal="player_ready" from="." to="PlayerUI" method="_on_Player_player_ready"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_Hitbox_area_exited"]
